--- a/css/main.css
+++ b/css/main.css
@@ -72,7 +72,7 @@ img li a:hover {
 
 /* top section content */
 #topContent {
-  width: 1080px;
+  width: 1280px;
   overflow: hidden;
   display: flex;
   position: relative;
@@ -87,6 +87,19 @@ img li a:hover {
   justify-content: space-around;
 }
 /*hook image*/
+
+/*hook title*/
+#hookTitle {
+  color: white;
+  font-size: 100px;
+  padding: 50px;
+  left: 0;
+  display: flex;
+  justify-content: space-around;
+  position: absolute;
+  font-family: 'Cedarville Cursive', cursive;
+}
+/*hook title*/
 
   /* agent profile card */
 
@@ -169,7 +182,7 @@ img li a:hover {
   background-color: #1D215B;
   color: white;
   padding: 10px 20px 10px 20px;
-  border-radius: 10px 10px 10px 10px;
+  border-radius: 2.5px 2.5px 2.5px 2.5px;
   margin: 5%;
 }
 
@@ -228,7 +241,7 @@ input {
 
 .part2 {
   height: 720px;
-  width: 1080px;
+  width: 1280px;
   background-color: grey;
 
 }
